--- a/src/app/pro/pro.component.html
+++ b/src/app/pro/pro.component.html
@@ -13,8 +13,10 @@
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Be a Pro</h1>
 
-                    <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
-                    <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
+                    <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
+                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    </div>
 
                 </div>
             </div>
@@ -41,7 +43,7 @@
                             <p style="text-align: justify; font-size: 18px;">1) Two years of experience as a professional poker player.</p>
                             <p style="text-align: justify; font-size: 18px;">2) Playing actively for a year (800 tournaments online, 40 live, 500 tournaments a year if doing both)</p>
 
-                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a href="#">here</a></strong> </p>
+                            <p style="text-align: justify; font-size: 18px;"><strong>If, you meet the following criteria, please submit your application <a (click)="togglereg()" id="reg" style="color: blue; cursor: pointer;">here</a></strong> </p>
                         </div>
                         <!--
                     <div class="row">
@@ -59,6 +61,14 @@
                     </div>
                 </div>
             </div>
+            <div style="display:none" id="divreg" class="toggle-form">
+                <app-register></app-register>
+            </div>
+            <div style="display:none" id="divshow2">
+                <app-login></app-login>
+            </div>
+
         </div>
     </div>
 </section>
++
