--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
 <!-- Footer Section Start -->
-<footer class="footer-area section-padding">
+>
+<footer class="footer-area section-padding" id="contact">
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-lg-3 col-sm-6 col-xs-12 wow fadeInUp" data-wow-delay="0.2s">
@@ -55,4 +56,5 @@
         </div>
     </div>
 </footer>
+
 <!-- Footer Section End -->
