added legality and how to play

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,11 +13,11 @@
 
 
                 <ul>
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="home/#about">About Us</a></li>
 
-                    <li><a href="#">Event Shedule</a></li>
-                    <li><a href="#">News/Media</a></li>
-                    <li><a href="#">Picture Gallery</a></li>
+                    <li><a href="home/#schedules">Psl Calendar</a></li>
+                    <li><a href="home/#gallery">Picture Gallery</a></li>
+                    <li><a routerLink="/legality" routerLinkActive="router-link-active" href='#top'>Legality</a></li>
                 </ul>
 
             </div>
