--- a/src/app/legality/legality.component.html
+++ b/src/app/legality/legality.component.html
@@ -1,4 +1,4 @@
-<!--how to play Section Start -->
+<!--legality Section Start -->
 <header id="header-wrap">
     <app-navigation></app-navigation>
     <!-- Main Carousel Section Start -->
