--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -64,6 +64,8 @@
        </a>
 
                     <ul class="dropdown-menu">
+
+                        <li><a class="dropdown-item" routerLink="/how-to-play" routerLinkActive="router-link-active" href='#top'>HOW TO PLAY</a></li>
                         <li><a class="dropdown-item" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top'>BE A QUALIFIER</a></li>
                         <li><a class="dropdown-item" routerLink="/pro" routerLinkActive="router-link-active" href='#top'>BE A PRO</a></li>
                         <li><a class="dropdown-item" routerLink="/mentor" routerLinkActive="router-link-active" href='#top'>BE A MENTOR</a></li>
