--- a/src/app/psl-team/psl-team.component.html
+++ b/src/app/psl-team/psl-team.component.html
@@ -10,8 +10,10 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">India's First Poker League</p>
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">Poker Sports League</h1>
                     <h1 class="wow fadeInDown heading" data-wow-delay=".4s">PSL Teams</h1>
-                    <a href="#" class="fadeInLeft wow btn btn-common btn-lg" data-wow-delay=".6s">Register Now!</a>
-                    <a href="#" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login</a>
+                    <a href="javascript:void(0);" class="fadeInLeft wow btn btn-border btn-lg" data-wow-delay=".6s" (click)="togglereg()" id="reg">Register Now! </a>
+                    <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
+                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
+                    </div>
                 </div>
             </div>
 
@@ -98,6 +100,12 @@
 
             </div>
         </div>
+    </div>
+    <div style="display:none" id="divreg" class="toggle-form">
+        <app-register></app-register>
+    </div>
+    <div style="display:none" id="divshow2">
+        <app-login></app-login>
     </div>
 </section>
 <!-- Team Section End -->
