--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -28,9 +28,6 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
                     <h1 class="wow bounceIn heading" data-wow-delay=".7s">#Poker Coming Soon</h1>
                     <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
-                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
-                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
-                    </div>
                 </div>
             </div>
             <div class="carousel-item">
@@ -39,10 +36,7 @@
                     <p class="fadeInUp wow" data-wow-delay=".6s">Poker Sports League</p>
                     <h1 class="wow fadeInUp heading" data-wow-delay=".6s">Register Now for Season 3</h1>
 
-                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-border btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
-                     <div *ngIf="!auth.isLoggedIn() && !user" class="nav-item">
-                        <button (click)="toggle()" id="btToggle" class="fadeInRight wow btn btn-border btn-lg" data-wow-delay=".6s">Login </button>
-                    </div>
+                    <a href="javascript:void(0);" class="fadeInUp wow btn btn-common btn-lg" data-wow-delay=".8s" (click)="togglereg()" id="reg">Register Now! </a>
                 </div>
             </div>
         </div>
@@ -461,37 +455,37 @@
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/Poker_Stuff.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/Poker_Stuff.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/Deltin.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/Deltin.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/DSport.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/DSport.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/JJ.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/JJ.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/Mera_Hoardings.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/Mera_Hoardings.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/Real_Activ.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/Real_Activ.png" alt=""></a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-3 col-xs-12">
                 <div class="spnsors-logo">
-                    <a href="#"><img class="img-fluid" src="assets/img/sponsors/OYO.png" alt=""></a>
+                    <a href="javascript:void(0)"><img class="img-fluid" src="assets/img/sponsors/OYO.png" alt=""></a>
                 </div>
             </div>
 
