--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,4 @@
 <!-- Footer Section Start -->
->
 <footer class="footer-area section-padding" id="contact">
     <div class="container">
         <div class="row">
@@ -40,10 +39,10 @@
                     <div class="contact-info">
                         <div class="mb-5">
                             <h4 class="mb-3"></h4>
-                            <p><span class="fas fa-map mr-2"></span>606 - 607, Gera Grand Imperium, Patto</p>
+                            <p><span class="fa fa-map mr-2"></span>606 - 607, Gera Grand Imperium, Patto</p>
                             <p>Panjim,Goa.</p>
-                            <p><span class="fas fa-phone mr-2"></span>+91 8322987777 </p>
-                            <p><span class="fas fa-envelope mr-2"></span> <a href="info@pokersportsleague.com"> info@pokersportsleague.com</a> </p>
+                            <p><span class="fa fa-phone mr-2"></span>+91 8322987777 </p>
+                            <p><span class="fa fa-envelope mr-2"></span> <a href="info@pokersportsleague.com"> info@pokersportsleague.com</a> </p>
                         </div>
 
                     </div>
