--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -129,7 +129,7 @@
                                 Mr. Amit Burman is responsible for Dabur India's foray into processed foods business with the setting up of Dabur Foods Ltd. It is to Amit's credit today that Dabur Real and Hommade are household names. He is also responsible for driving all business
                                 strategy, development and communications at Dabur Foods.
                             </div>
-                            <div class="header-title" data-toggle="collapse" data-target="#amit_burman" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <div id="amit_toggle" class="header-title" data-toggle="collapse" data-target="#amit_burman" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
                                 <span style="color:blue;">Read more</span>
                             </div>
                         </div>
@@ -152,7 +152,7 @@
                             <div id="pranav_bagai" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
                                 Mr. Bagai is responsible for all operations and management of PSL .
                             </div>
-                            <div class="header-title" data-toggle="collapse" data-target="#pranav_bagai" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <div id="pranav_toggle" class="header-title" data-toggle="collapse" data-target="#pranav_bagai" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
                                 <span style="color:blue;">Read more</span>
                             </div>
                         </div>
@@ -175,7 +175,7 @@
                             <div id="a_g" class="collapse" aria-labelledby="headingOne" data-parent="#headingOne">
                                 Mr. Bagai is responsible for all operations and management of PSL .
                             </div>
-                            <div class="header-title" data-toggle="collapse" data-target="#a_g" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
+                            <div id="ag_toggle" class="header-title" data-toggle="collapse" data-target="#a_g" aria-expanded="true" aria-controls="collapseOne" style="cursor:pointer">
                                 <span style="color:blue;">Read more</span>
                             </div>
                         </div>
@@ -237,7 +237,7 @@
             <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
                 <div class="counter wow fadeInRight" data-wow-delay="1.2s">
                     <div class="icon"> <img src="assets/img/money.png" class="img-fluid team-img" alt="" href='#top' /></div>
-                    <p>4.5
+                    <p>5
                     </p>
                     <span> CRORES
                       PRIZE POOL</span>
